--- a/Домашно 4/microservices/winery-service/Dockerfile
+++ b/Домашно 4/microservices/winery-service/Dockerfile
@@ -1,12 +1,8 @@
-FROM openjdk:11-jre-slim
-
+FROM openjdk:17-jdk-slim
 WORKDIR /winery-service
 
-# Copy the JAR file into the container
-COPY target/winery-service.jar /app/winery-service.jar
+COPY target/winery-service-0.0.1-SNAPSHOT.jar /winery-service
 
-# Expose the port that the Spring Boot application will run on
-EXPOSE 8082
+EXPOSE 4002
 
-# Command to run the Spring Boot application
-CMD ["java", "-jar", "winery-service.jar"]
+CMD ["java", "-jar", "winery-service-0.0.1-SNAPSHOT.jar"]
