--- a/Домашно 4/microservices/auth-service/src/main/resources/application.properties
+++ b/Домашно 4/microservices/auth-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=auth-service
 ##eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka
 eureka.instance.hostname=wd-discovery
 
 # PostgreSQL Configuration
