--- a/Домашно 4/microservices/reviews-service/Dockerfile
+++ b/Домашно 4/microservices/reviews-service/Dockerfile
@@ -1,12 +1,8 @@
-FROM openjdk:11-jre-slim
-
+FROM openjdk:17-jdk-slim
 WORKDIR /reviews-service
 
-# Copy the JAR file into the container
-COPY target/reviews-service.jar /app/reviews-service.jar
+COPY target/reviews-service-0.0.1-SNAPSHOT.jar /reviews-service
 
-# Expose the port that the Spring Boot application will run on
-EXPOSE 8082
+EXPOSE 4001
 
-# Command to run the Spring Boot application
-CMD ["java", "-jar", "reviews-service.jar"]
+CMD ["java", "-jar", "reviews-service-0.0.1-SNAPSHOT.jar"]
