--- a/Домашно 4/wine-and-dine-front-end/Dockerfile
+++ b/Домашно 4/wine-and-dine-front-end/Dockerfile
@@ -1,20 +1,12 @@
-# Use an official Node.js runtime as a base image
-FROM node:14 as build
+FROM node:16.13.2-alpine as build
 
 WORKDIR /app
 
 COPY package*.json ./
-
 RUN npm install
 
 COPY . .
-
 RUN npm run build
 
-FROM nginx:alpine
-
-COPY --from=build /app/build /usr/share/nginx/html
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 3000
+CMD ["npm", "run", "start"]
